small fix to header menu spacing

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -55,28 +55,26 @@ body {
   width: 100%;
   display: flex;
   margin: auto;
-  padding: 1% 15.4% 1% 15.4%;
+  padding: 1.5% 15.4% 1.5% 15.4%;
   z-index: 10;
 }
 
 .logoContainer {
   display: flex;
-  /* height: 100%; */
-  justify-content: left;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
   flex: 1;
 }
 
-.logo {
-  float: left;
-  height: 100%;
-  width: auto;
+.logoContainer h1 {
+  font-size: 40px;
 }
 
 .menuContainer {
   display: flex;
   justify-content: right;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .menuButton {
